# next_book

./: Cargo.toml  README.md  books.db  ouput.csv
resources/: 1001books.csv  converted_input.csv  output.csv  temp_input.csv  temp_output  temp_output.csv  temp_output_dumas.csv
src/: book.rs  db.rs  lib.rs  main.rs  open_library_api.rs
