[package]
name = "next_book"
version = "0.1.0"
authors = ["Sky Brewer <jacobrewer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.130", features = ["derive" ]}
serde_json = "1.0"
reqwest = {version = "0.11.4", features = ["json"]}
tokio = { version = "1", features = ["full"] }